fix overflow-x and this time this website v1.0.1 relise

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@400;600;700;900&family=Satisfy&display=swap");
 
 /* ------------- */
-htm,
+html,
 body {
   font-family: "Raleway", sans-serif;
+  /* background-color: red; */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  /* overflow: hidden; */
 }
 .active {
   font-weight: 700;
@@ -98,6 +105,7 @@ ul li:last-child:hover {
 /* media Queary start  */
 /* // `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
+  
   #banner h2{
     font-size: 1.6rem !important;
   }
